# CrossroadTrafficMonitor

./: CMakeLists.txt  Dockerfile  README.md  report.xml
.github/workflows/: ci.yaml
src/: CMakeLists.txt  CmakeLists.txt  CrossroadTrafficMonitoring.cpp  CrossroadTrafficMonitoring.hpp  interactive_main.cpp  test.cpp
tests/: CMakeLists.txt  CmakeLists.txt  test_CrossroadTrafficMonitoring.cpp
